# real-time

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  build.sh  install.sh
.github/workflows/: ci.yml  release.yml
.kiro/specs/one-click-experience/: design.md  requirements.md  tasks.md
.kiro/specs/open-source-roadmap/: design.md  requirements.md  (+1 more)
docs/: PSDOM.md  SPEC.md
ejemplo/: index.html  style.css
panel-browser/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
panel-browser/src/: box-renderer.ts  directive-applicator.ts  html-reconstructor.ts  index.ts  layout-engine.ts  types.ts  ws-client.ts
parser/: Cargo.toml
parser-wasm/: Cargo.toml
parser-wasm/src/: css_parser.rs  html_parser.rs  lib.rs
parser/src/: css_parser.rs  html_parser.rs  lib.rs  main.rs  pipeline.rs
parser/tests/: css_properties.proptest-regressions  css_properties.rs  e2e_integration.rs  grouped_selector_properties.proptest-regressions  grouped_selector_properties.rs  html_properties.rs  pipeline_properties.rs
realtime-cli/: Cargo.toml
realtime-cli/src/: cli.rs  consolidator.rs  file_watcher.rs  launcher.rs  lib.rs  main.rs  panel_server.rs  scanner.rs
realtime-cli/tests/: cli_properties.rs  consolidator_properties.proptest-regressions  consolidator_properties.rs  e2e_consolidator.rs  file_watcher_tests.rs  launcher_tests.rs  port_properties.rs  scanner_properties.rs  source_file_properties.rs
relay/: Cargo.toml
relay/src/: main.rs  server.rs
relay/tests/: relay_properties.rs
shared/: Cargo.toml
shared/src/: lib.rs
(+24 files in other folders)
