[package]
name = "realtime-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "realtime"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
parser = { path = "../parser" }
relay = { path = "../relay" }
clap = { version = "4", features = ["derive"] }
notify = "8"
notify-debouncer-mini = "0.6"
webbrowser = "1"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
rust-embed = "8"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
mime_guess = "2"
futures-util = "0.3"
tokio-tungstenite = "0.24"

[dev-dependencies]
proptest = "1"
tempfile = "3"
tokio-test = "0.4"
